adding tests for screen